<!--

    Copyright (c) 2016, Stephan Heinemann (UVic Center for Aerospace Research)
    All rights reserved.

    Redistribution and use in source and binary forms, with or without modification,
    are permitted provided that the following conditions are met:

    1. Redistributions of source code must retain the above copyright notice, this
    list of conditions and the following disclaimer.

    2. Redistributions in binary form must reproduce the above copyright notice,
    this list of conditions and the following disclaimer in the documentation
    and/or other materials provided with the distribution.

    3. Neither the name of the copyright holder nor the names of its contributors
    may be used to endorse or promote products derived from this software without
    specific prior written permission.

    THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
    AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
    IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
    DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
    FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
    DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
    SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
    CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
    OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
    OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.uvic-cfar.swim</groupId>
	<artifactId>worldwind</artifactId>
	<version>1.0.0-alpha3-SNAPSHOT</version>
	<packaging>bundle</packaging>
	<name>SWIM Worldwind</name>
	<description>NASA Worldwind Extensions for SWIM-based Planning, Decision-Making and Support</description>

	<inceptionYear>2016</inceptionYear>
	<licenses>
		<license>
			<name>The BSD 3-Clause License</name>
			<url>https://opensource.org/licenses/BSD-3-Clause</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<url>http://rigi-lab-03.cs.uvic.ca/safcs/worldwind</url>

	<organization>
		<name>UVic Center for Aerospace Research</name>
		<url>http://www.uvic-cfar.com</url>
	</organization>

	<developers>
		<developer>
			<organization>UVic Center for Aerospace Research</organization>
			<organizationUrl>http://www.uvic-cfar.com</organizationUrl>
			<name>Stephan Heinemann</name>
			<email>stephan@rigiresearch.com</email>
		</developer>
	</developers>

	<scm>
		<url>https://github.com/stephanheinemann/worldwind</url>
		<connection>scm:git:git://github.com/stephanheinemann/worldwind.git</connection>
		<developerConnection>scm:git:git://github.com/stephanheinemann/worldwind.git</developerConnection>
	</scm>

	<issueManagement>
		<url>https://github.com/stephanheinemann/worldwind/issues</url>
		<system>GitHub</system>
	</issueManagement>

	<ciManagement>
		<url>http://rigi-lab-03.cs.uvic.ca:8008</url>
		<system>Jenkins</system>
		<notifiers>
			<notifier>
				<type>mail</type>
				<sendOnError>true</sendOnError>
				<sendOnSuccess>false</sendOnSuccess>
				<sendOnWarning>false</sendOnWarning>
				<configuration>
					<address>stephan@rigiresearch.com</address>
				</configuration>
			</notifier>
		</notifiers>
	</ciManagement>

	<profiles>
		<profile>
			<id>default</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<distributionManagement>
				<repository>
					<id>maven-releases</id>
					<url>http://rigi-lab-03.cs.uvic.ca:8081/repository/maven-releases</url>
				</repository>
				<snapshotRepository>
					<id>maven-snapshots</id>
					<url>http://rigi-lab-03.cs.uvic.ca:8081/repository/maven-snapshots</url>
				</snapshotRepository>
				<site>
					<id>maven-site</id>
					<url>scp://rigi-lab-03.cs.uvic.ca/var/www/html/safcs/worldwind</url>
				</site>
			</distributionManagement>
		</profile>
		<profile>
			<id>ossrh</id>
			<distributionManagement>
				<repository>
					<id>ossrh</id>
					<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
				</repository>
				<snapshotRepository>
					<id>ossrh</id>
					<url>https://oss.sonatype.org/content/repositories/snapshots</url>
				</snapshotRepository>
			</distributionManagement>
		</profile>
	</profiles>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<includes>
					<include>config/*.xml</include>
				</includes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.2.0</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-clean-plugin</artifactId>
				<version>3.1.0</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<compilerVersion>11</compilerVersion>
					<source>11</source>
					<target>11</target>
					<release>11</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
				<configuration>
					<archive>
						<manifest>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
							<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
						</manifest>
						<manifestEntries>
							<Built-By />
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<archive>
						<manifest>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
							<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
						</manifest>
						<manifestEntries>
							<Built-By />
						</manifestEntries>
					</archive>
					<additionalparam>-Xdoclint:none</additionalparam>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.felix</groupId>
				<artifactId>maven-bundle-plugin</artifactId>
				<version>5.1.1</version>
				<extensions>true</extensions>
				<configuration>
					<instructions>
						<Export-Package>${local-packages},gov.nasa.worldwind.geom;-split-package:=first</Export-Package>
						<Private-Package>com.binarydreamers.trees</Private-Package>
						<_removeheaders>Built-By</_removeheaders>
					</instructions>
				</configuration>
			</plugin>
			<plugin>
				<groupId>external.atlassian.jgitflow</groupId>
				<artifactId>jgitflow-maven-plugin</artifactId>
				<version>1.0-m5.1</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.9.1</version>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.wagon</groupId>
						<artifactId>wagon-ssh</artifactId>
						<version>3.4.2</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>3.1.1</version>
			</plugin>
			<plugin>
				<groupId>com.mycila</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<version>3.0</version>
				<configuration>
					<aggregate>true</aggregate>
					<header>src/main/resources/license/license.txt</header>
					<properties>
						<owner>Stephan Heinemann</owner>
						<organization>UVic Center for Aerospace Research</organization>
					</properties>
					<excludes>
						<exclude>src/test/resources/xml/**/*.xml</exclude>
						<exclude>src/main/java/com/binarydreamers/trees/**/*.java</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>1.6</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
			<version>2.3.1</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>jaxb-runtime</artifactId>
			<version>2.3.1</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.11</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-swing</artifactId>
			<version>11.0.2</version>
		</dependency>
		<dependency>
			<groupId>org.jfxtras</groupId>
			<artifactId>jfxtras-controls</artifactId>
			<version>11-r1</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.uvic-cfar.swim.nasa.worldwind</groupId>
			<artifactId>corex</artifactId>
			<version>2.2.0</version>
		</dependency>
		<dependency>
			<groupId>com.metsci.ext.org.jogamp.gluegen</groupId>
			<artifactId>gluegen-rt-main</artifactId>
			<version>2.4.0-rc-20200202</version>
		</dependency>
		<dependency>
			<groupId>com.metsci.ext.org.jogamp.jogl</groupId>
			<artifactId>jogl-all-main</artifactId>
			<version>2.4.0-rc-20200202</version>
		</dependency>
		<dependency>
			<groupId>com.uvic-cfar.swim</groupId>
			<artifactId>iwxxm-jaxb</artifactId>
			<version>2.0.0-beta5</version>
		</dependency>
		<dependency>
			<groupId>com.uvic-cfar.swim</groupId>
			<artifactId>droneconnect</artifactId>
			<version>1.0.0-alpha3-SNAPSHOT</version><!-- 1.0.0-alpha3 -->
		</dependency>
	</dependencies>

</project>
